...
    <string name="use_input_tag" maxLength="41">Type answer into the card</string>
    <string name="use_input_tag_summ">Use a text input box inside the card to type in the answer</string>
    <string name="reset_languages" maxLength="41">Reset languages</string>
    <string name="reset_languages_summ">Reset language assignments (for text to speech and dictionaries) for all decks</string>
    <string name="reset_languages_question">Reset all language assignments?</string>
    <string name="reset_confirmation">All states reset</string>
    <string name="card_zoom" maxLength="41">Card zoom</string>
    <string name="image_zoom" maxLength="41">Image zoom</string>
    <string name="button_size" maxLength="41">Answer button size</string>
    <string name="card_browser_font_size" maxLength="41">Card browser font scaling</string>
    <string name="card_browser_hide_media" maxLength="41">Display filenames in card browser</string>
    <string name="card_browser_hide_media_summary">Display audio filenames in the card browser question/answer fields</string>
    <string name="col_path" maxLength="41">Hirameki directory</string>
...
    <string name="backup_limits_lifetime">Lifetime</string>
    <string name="app_theme" maxLength="41">Theme</string>
    <string name="day_theme" maxLength="41">Day theme</string>
    <string name="night_theme" maxLength="41">Night theme</string>
    <string name="language" maxLength="41">Language</string>
    <string name="language_system">System language</string>
    <string name="notification_pref" maxLength="41">Notifications</string>
    <string name="notification_pref_title" maxLength="41">Notify when</string>
    <string name="never_notify">Never notify</string>
    <string name="notify_when_pending">Pending messages available</string>
    <string name="notification_minimum_cards_due" comment="Consider keeping the unbreakable space after the digit">More than %d&#160;cards due</string>
    <string name="notification_minimum_cards_due_vibrate" maxLength="41">Vibrate</string>
    <string name="notification_minimum_cards_due_blink" maxLength="41">Blink light</string>
...
